[package]
name = "wdp-core"
version = "0.1.0"
edition = "2021"
authors = ["VECTOR"]
description = "Wanderer Data Preservation: A Moving Target Defense protocol for decentralized storage."
license = "MIT"
repository = "https://github.com/dododbobovo-commits/wdp"
keywords = ["decentralized", "p2p", "security", "ed25519", "censorship-resistance"]
categories = ["cryptography", "network-programming", "wasm"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "wdp_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

tokio = { version = "1.0", features = ["full"] }

libp2p = { version = "0.52", features = ["tcp", "dns", "websocket", "noise", "yamux"] }

# --- Utilities ---
log = "0.4"
chrono = "0.4"
